<resources>
    <string name="app_name">CurrencyView</string>
    <string name="welcome_to_currencyview">Welcome to CurrencyView</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_username">USERNAME</string>
    <string name="login_signin">S I G N I N</string>
    <string name="login_sign_up">SIGN UP FOR AN ACCOUNT?</string>
</resources>